--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=c04ddabe01d852b742d1
+github.client.secret=eac9e576c1604f5cef908b5e8adb48413ae66c40
+github.redirect.uri=http://localhost:8887/callback
