add an edit function depend on user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ github.client.id=c04ddabe01d852b742d1
 github.client.secret=eac9e576c1604f5cef908b5e8adb48413ae66c40
 github.redirect.uri=http://localhost:8887/callback
 
-#h2µÄÊý¾ÝÔ´ÅäÖÃ
+#h2ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½
 #spring.datasource.url=jdbc:h2:~/community
 #spring.datasource.username=root
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=org.h2.Driver
 
-#mysqlµÄÊý¾ÝÔ´ÅäÖÃ
-spring.datasource.url=jdbc:mysql://localhost/community
+#mysqlï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½
+spring.datasource.url=jdbc:mysql://localhost/community?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
