--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 
 #配置springboot-Mybatis
-mybatis.type-aliases-package=life.majiang.community.model
+mybatis.type-aliases-package=life.majiang.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
