git aliyun have not finished yet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,18 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #配置springboot-Mybatis
 mybatis.type-aliases-package=life.majiang.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+access-key= LTAI4FjDSJ5Y5gMS6JBnbsZ7
+access-secret=h3GyUVqkBtdjwzTuaIKfptxIaY6KCu
+#阿里云aliyun
+aliyun.oss.access-id= 1558477927580717
+aliyun.oss.access-key= LTAI4FjDSJ5Y5gMS6JBnbsZ7
+aliyun.oss.access-secret= h3GyUVqkBtdjwzTuaIKfptxIaY6KCu
+aliyun.oss.endpoint= oss-cn-shenzhen.aliyuncs.com
+aliyun.oss.bucket= zhenbaoo
+
+logging.file=logs/community.log
+logging.level.root=info
+logging.level.life.majiang.community.mapper=debug
+logging.file.max-size=1KB
+logging.file.max-history=3
